fixed overflow problem

--- a/app/styles/projects/_project.sass
+++ b/app/styles/projects/_project.sass
@@ -1,5 +1,8 @@
 .handangular--container
-  min-width: 960px;
+  width: 950px;
+  overflow-x: hidden
+  min-height: 40rem
+  position: relative
 
 .project-group
   background-size: cover
@@ -87,8 +90,8 @@
 
 .section--video
   @extend .is__background--c-darkgray
-  width: 60vw
-  height: 30vw
+  width: 60%
+  height: 30%
 
 .section-box
   position: absolute
